[gd_scene load_steps=9 format=2]

[ext_resource path="res://EnemyWalker.png" type="Texture" id=1]
[ext_resource path="res://Actors/Walker.gd" type="Script" id=2]
[ext_resource path="res://Actors/PlayerDetectionZone.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 5 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 1.75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 53.75, 3.75 )

[node name="Walker" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
modulate = Color( 0.992157, 1, 0, 1 )
rotation = 1.5708
scale = Vector2( 0.5, 0.2 )
enabled = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -2.98023e-07, 2.5 )
scale = Vector2( 0.875, 0.75 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0, 0.298039, 0.556863, 1 )
position = Vector2( 0, -2.5 )
shape = SubResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.0156863, 0, 0.0509804, 1 )
position = Vector2( 0, 1.25 )
shape = SubResource( 5 )

[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]

[editable path="PlayerDetectionZone"]
